--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -31,7 +31,7 @@
         evt.target.x = evt.stageX;
         evt.target.y = evt.stageY;
         console.log(balloon.x, balloon.y);
-        socket.emit('move done', balloon.x,  balloon.y);
+        socket.emit('move done', {x: balloon.x, y: balloon.y});
       });
       console.log(balloon.x, balloon.y);
       //socket.emit('move done', balloon.x,  balloon.y);
