--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -13,8 +13,6 @@
     <canvas id="canvas"></canvas>
     <script >
       var socket = io(location.origin);
-      var ID;
-      var sprite;
           stage = new createjs.Stage("canvas");
           canvas = document.querySelector('canvas');
           canvas.width = window.innerWidth-50;
@@ -30,11 +28,11 @@
       balloon.on("pressmove", function(evt) {
         evt.target.x = evt.stageX;
         evt.target.y = evt.stageY;
-        console.log(balloon.x, balloon.y);
-        socket.emit('move done', {x: balloon.x, y: balloon.y});
+        
       });
-      console.log(balloon.x, balloon.y);
-      //socket.emit('move done', balloon.x,  balloon.y);
+      balloon.on("mouseup", function(evt) {
+      socket.emit('move done', {x: balloon.x, y: balloon.y});
+      };
            
       socket.on('user disconnected', function(UserId){
         stage.removeChild(sprite);
