--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -35,7 +35,7 @@
       });
            
       socket.on('user disconnected', function(UserId){
-        stage.removeChild(sprite);
+        stage.removeChild(balloon);
       });
     
       function onTickHandler(evt) {   
