--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -31,7 +31,8 @@
         
       });
       balloon.on("pressup", function(evt) {
-      socket.emit('move done', balloon.x, balloon.y);
+        console.log(balloon.x, balloon.y);
+        socket.emit('move done', {x: balloon.x, y: balloon.y});
       });
            
       socket.on('user disconnected', function(UserId){
