--- a/days/day22.html
+++ b/days/day22.html
@@ -18,6 +18,7 @@
           canvas.width = window.innerWidth-50;
           canvas.height = window.innerHeight-50;
       socket.on('user connected', function(UserId){ 
+        console.log(window[UserId]);
         window[UserId] = new createjs.Shape();
         window[UserId].graphics.beginFill("Crimson").drawRoundRectComplex(0, 0, 40, 65, 20,20,35,35);     
         stage.addChild(window[UserId]);
@@ -38,7 +39,10 @@
           window[UserId].y = obj.y;
       });
       
-      socket.on('sprite change coord', function(UserId, obj){
+      socket.on('sprite change coord', function(UserId, obj, users){
+        console.log(users);
+        console.log(obj);
+        console.log(window[UserId]);
        // createjs.Tween.get(window[UserId], {loop: false}).to({x: x,y: y}, 500, createjs.Ease.linear(1))  
           window[UserId].x = obj.x; 
           window[UserId].y = obj.y;
