--- a/days/day22.html
+++ b/days/day22.html
@@ -43,6 +43,7 @@
         console.log(users);
         console.log(obj);
         console.log(window[UserId]);
+        console.log(UserId);
        // createjs.Tween.get(window[UserId], {loop: false}).to({x: x,y: y}, 500, createjs.Ease.linear(1))  
           window[UserId].x = obj.x; 
           window[UserId].y = obj.y;
