--- a/days/day22.html
+++ b/days/day22.html
@@ -10,7 +10,8 @@
     </style>
   </head> 
   <body>
-    <canvas id="canvas"></canvas><br>
+    <canvas id="canvas"></canvas>
+    <a href="day22-control.html"> Интерфейс управления </a>
     <script >
       var socket = io();
           stage = new createjs.Stage("canvas");
