--- a/days/day22.html
+++ b/days/day22.html
@@ -11,7 +11,7 @@
   </head> 
   <body>
     <canvas id="canvas"></canvas>
-    <a href="/day22-control"> Интерфейс управления </a>
+    <a href="/day22-controler"> Интерфейс управления </a>
     <script >
       var socket = io();
           stage = new createjs.Stage("canvas");
