--- a/days/day22-controler.html
+++ b/days/day22-controler.html
@@ -11,7 +11,7 @@
   </head> 
   <body>
     <canvas id="canvas"></canvas>
-    <a href="/"> Канвас </a>
+    <a href="/" target="_blank"> Канвас </a>
     <script >
       var socket = io(location.origin);
           stage = new createjs.Stage("canvas");
