--- a/days/day22.html
+++ b/days/day22.html
@@ -57,6 +57,9 @@
       }
     
      function CreateSprite(Id,X,Y){
+        console.log(Id);
+       console.log(X);
+       console.log(Y);
         window[Id] = new createjs.Shape();
         window[Id].graphics.beginFill("Crimson").drawRoundRectComplex(0, 0, 40, 65, 20,20,35,35);     
         stage.addChild(window[Id]);
