--- a/days/day23-controler.html
+++ b/days/day23-controler.html
@@ -50,6 +50,9 @@
         canvas.width = window.innerWidth-50;
         canvas.height = window.innerHeight-50;
       };
+      function RandomNumb(min, max){
+        return Math.random() * (max - min) + min;
+      }
      
     </script>
   </body>
