--- a/days/day23-controler.html
+++ b/days/day23-controler.html
@@ -19,10 +19,12 @@
           canvas.width = window.innerWidth-50;
           canvas.height = window.innerHeight-50;
       var ID;
+      var color;
       socket.on('user connected', function(UserId){ 
         ID = UserId;
+        color = '#'+ RandomNumb(0,255).toString(16) + RandomNumb(0,255).toString(16) + RandomNumb(0,255).toString(16);
         window[UserId] = new createjs.Shape();
-        window[UserId].graphics.beginFill("rgba(RandomNumb(0, 255), RandomNumb(0, 255), RandomNumb(0, 255), 0.5)").drawCircle(0, 0, RandomNumb(0, 30));       
+        window[UserId].graphics.beginFill(color).drawCircle(0, 0, RandomNumb(0, 30));       
         window[UserId].x = 60;
         window[UserId].y = 60;
         stage.addChild(window[UserId]);
