--- a/days/day23-controler.html
+++ b/days/day23-controler.html
@@ -53,7 +53,7 @@
         canvas.height = window.innerHeight-50;
       };
       function RandomNumb(min, max){
-        return Math.Floor(Math.random() * (max - min) + min);
+        return Math.floor(Math.random() * (max - min) + min);
       }
      
     </script>
