--- a/days/day23-controler.html
+++ b/days/day23-controler.html
@@ -24,12 +24,12 @@
         ID = UserId;
         color = '#'+ RandomNumb(0,255).toString(16) + RandomNumb(0,255).toString(16) + RandomNumb(0,255).toString(16);
         window[UserId] = new createjs.Shape();
-        window[UserId].graphics.beginFill(color).drawCircle(0, 0, RandomNumb(0, 30));       
+        window[UserId].graphics.beginFill(color).drawCircle(0, 0, RandomNumb(5, 30));       
         window[UserId].x = 60;
         window[UserId].y = 60;
         stage.addChild(window[UserId]);
         createjs.Ticker.addEventListener("tick", onTickHandler);
-        socket.emit('user done',  window[UserId].x,  window[UserId].y, ID);
+        socket.emit('user done',  window[UserId].x,  window[UserId].y, color);
         window[UserId].on("pressmove", function(evt) {
           evt.target.x = evt.stageX;
           evt.target.y = evt.stageY;   
