--- a/days/day23-controler.html
+++ b/days/day23-controler.html
@@ -20,16 +20,18 @@
           canvas.height = window.innerHeight-50;
       var ID;
       var color;
+      var size;
       socket.on('user connected', function(UserId){ 
         ID = UserId;
         color = '#'+ RandomNumb(0,255).toString(16) + RandomNumb(0,255).toString(16) + RandomNumb(0,255).toString(16);
+        size = RandomNumb(5,30);
         window[UserId] = new createjs.Shape();
-        window[UserId].graphics.beginFill(color).drawCircle(0, 0, RandomNumb(5, 30));       
+        window[UserId].graphics.beginFill(color).drawCircle(0, 0, size);       
         window[UserId].x = 60;
         window[UserId].y = 60;
         stage.addChild(window[UserId]);
         createjs.Ticker.addEventListener("tick", onTickHandler);
-        socket.emit('user done',  window[UserId].x,  window[UserId].y, id, color);
+        socket.emit('user done',  window[UserId].x,  window[UserId].y, id, color, size);
         window[UserId].on("pressmove", function(evt) {
           evt.target.x = evt.stageX;
           evt.target.y = evt.stageY;   
