--- a/days/day24.html
+++ b/days/day24.html
@@ -48,6 +48,7 @@
       });
       
       socket.on('sprite change coord', function(UserId, obj){
+        console.log('yes');
         window[UserId].x = obj.x;
         window[UserId].y = obj.y;
       }); 
