--- a/days/day25.html
+++ b/days/day25.html
@@ -37,12 +37,13 @@
             socket.emit('user done',  circle.x, circle.y, ID, color, size); 
             var activeCount = circleCount;
             stage.addEventListener("pressmove", handleMouseUp);
+		  createjs.Ticker.addEventListener("tick", tick);
             //window[UserId] = new createjs.Shape();
             //window[UserId].graphics.beginFill(color).drawCircle(0, 0, size);       
             //window[UserId].x = RandomNumb(20,canvas.width-140);
             //window[UserId].y = RandomNumb(20,canvas.height-140);
             //stage.addChild(window[UserId]);
-            createjs.Ticker.addEventListener("tick", onTickHandler);
+            //createjs.Ticker.addEventListener("tick", onTickHandler);
             //socket.emit('user done',  window[UserId].x,  window[UserId].y, ID, color, size); 
             //window[UserId].on("pressmove", function(evt) {
             function handleMouseUp(event) {
