--- a/days/day25.html
+++ b/days/day25.html
@@ -107,7 +107,7 @@
         stage.addChild(window[Id]);
         window[Id].x = X;
         window[Id].y = Y;
-      createjs.Ticker.addEventListener("tick", onTickHandler);
+      createjs.Ticker.addEventListener("tick", tick);
       };        
     </script>
   </body>
