--- a/days/day25.html
+++ b/days/day25.html
@@ -48,13 +48,13 @@
             socket.emit('user done',  window[UserId].x,  window[UserId].y, ID, color, size); 
 	  });
             activeCount = circleCount;
-            stage.addEventListener("pressmove",  function(evt){
+             window[UserId].on("pressmove",  function(evt){
 	    	evt.target.x = evt.stageX;
               	evt.target.y = evt.stageY; 
 	    	for (var i = 0; i < circleCount; i++) {
                 	var ref = tweens[i].ref;
                 	var tween = tweens[i].tween;
-                	createjs.Tween.get(ref, {override: true}).to({x: stage.mouseX, y: stage.mouseY}, (0.5 + i * 0.04) * 1500, createjs.Ease.linear).call(tweenComplete);
+                	createjs.Tween.get(ref, {override: true}).to({x: stage.mouseX, y: stage.mouseY}, (0.5 + i * 0.04) * 1000, createjs.Ease.linear).call(tweenComplete);
                 	activeCount = circleCount;
 			createjs.Ticker.addEventListener("tick", tick);
               	};
