--- a/days/day25.html
+++ b/days/day25.html
@@ -35,11 +35,11 @@
             createjs.Ticker.addEventListener("tick", onTickHandler);
             socket.emit('user done',  window[UserId].x,  window[UserId].y, ID, color, size); 
             window[UserId].on("pressmove", function(evt) {
-            if ( ((evt.stageX + evt.stageY - currentx - currenty) % 3) == 0) {
+            //if ( ((evt.stageX + evt.stageY - currentx - currenty) % 3) == 0) {
               CreateTail(evt.stageX, evt.stageY, color, size); 
-              currentx = evt.stageX;
-              currenty = evt.stageY;
-            } 
+              //currentx = evt.stageX;
+              //currenty = evt.stageY;
+            //} 
               evt.target.x = evt.stageX;
               evt.target.y = evt.stageY;   
               socket.emit('move done', {x: window[UserId].x, y: window[UserId].y}, ID);
