--- a/days/day26.html
+++ b/days/day26.html
@@ -31,7 +31,7 @@
             circle.style.left = RandomNumb(20,950);
             circle.style.top = RandomNumb(20,650);
             circle.classList.add("circle");
-            circle.classList.add(windows[UserId]);
+            circle.classList.add(window[UserId]);
             stage.addChild(circle);
 	  }); 
       function RandomNumb(min, max){
