--- a/days/day26.html
+++ b/days/day26.html
@@ -30,7 +30,7 @@
             circle.style.hieght = size;
             circle.style.left = RandomNumb(20,950);
             circle.style.top = RandomNumb(20,650);
-            circle.className("circle");
+            circle.className = "circle";
             circle.classList.add(window[UserId]);
             stage.appendChild(circle);
 	  }); 
