--- a/days/day26.html
+++ b/days/day26.html
@@ -27,7 +27,7 @@
             circle = document.createElement('div');	
             circle.style.backgroundColor = color;
             circle.style.width = size + "";
-            circle.style.hieght = size + "";
+            circle.style.height = size + "";
             circle.style.left = RandomNumb(20,950) + "";
             circle.style.top = RandomNumb(20,650) + "";
             circle.className = "circle";
