--- a/days/day26.html
+++ b/days/day26.html
@@ -4,6 +4,7 @@
     <script src="https://code.createjs.com/easeljs-0.8.0.min.js"> </script>
     <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"> </script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"> </script>
+    <link href="/main.css" rel="stylesheet">
     <title>Disappearing Tail</title>
     <style>
       #canvas {border: solid 1px black; background-color: lightblue;}
