--- a/days/day26.html
+++ b/days/day26.html
@@ -28,10 +28,10 @@
             circle = document.createElement('div');
             stage.appendChild(circle);
             circle.style.backgroundColor = color;
-            circle.style.width = size + ""; 
-            circle.style.height = size + "";
-            circle.style.left = RandomNumb(20,950) + "";
-            circle.style.top = RandomNumb(20,650) + "";
+            circle.style.width = size + "px"; 
+            circle.style.height = size + "px";
+            circle.style.left = RandomNumb(20,950) + "px";
+            circle.style.top = RandomNumb(20,650) + "px";
             circle.className = "circle";
             circle.classList.add(window[UserId]);
 
