--- a/days/day26.html
+++ b/days/day26.html
@@ -38,9 +38,9 @@
             socket.emit('user done26',  circle.style);
             //MainCircle = document.getElementByClassName[UserId][0];
 	  }); 
-      socket.on('user done26', function(X, Y, color, size, ID){
-        CreateSprite(X,Y, color, size, ID);
-      });
+      //socket.on('user done26', function(X, Y, color, size, ID){
+      //  CreateSprite(X,Y, color, size, ID);
+      //});
       function RandomNumb(min, max){
         return Math.floor(Math.random() * (max - min) + min);
       }
