--- a/days/day26.html
+++ b/days/day26.html
@@ -45,6 +45,7 @@
         return Math.floor(Math.random() * (max - min) + min);
       }
       function CreateSprite(X,Y, color, size, Id){
+	      console.log(color);
         AnotherСircle = document.createElement('div');
         stage.appendChild(AnotherСircle);
         AnotherСircle.style.backgroundColor = color;
