--- a/days/day26.html
+++ b/days/day26.html
@@ -28,13 +28,14 @@
             circle = document.createElement('div');
             stage.appendChild(circle);
             circle.style.backgroundColor = color;
+            console.log(color);
             circle.style.width = size + "px"; 
             circle.style.height = size + "px";
             circle.style.left = RandomNumb(20,950) + "px";
             circle.style.top = RandomNumb(20,600) + "px";
             circle.className = "circle";
             circle.classList.add(UserId);
-            console.log(circle.style["background-color"]);
+            console.log(circle.style[background-color]);
             socket.emit('user done26',  circle.style);
             //MainCircle = document.getElementByClassName[UserId][0];
 	  }); 
