--- a/days/day26.html
+++ b/days/day26.html
@@ -35,7 +35,7 @@
             circle.style.top = RandomNumb(20,600) + "px";
             circle.className = "circle";
             circle.classList.add(UserId);
-            console.log(circle.style[background-color]);
+            console.log(circle.style["background-color"]);
             socket.emit('user done26',  circle.style);
             //MainCircle = document.getElementByClassName[UserId][0];
 	  }); 
