--- a/days/day26.html
+++ b/days/day26.html
@@ -28,15 +28,13 @@
             circle = document.createElement('div');
             stage.appendChild(circle);
             circle.style.backgroundColor = color;
-            console.log(color);
             circle.style.width = size + "px"; 
             circle.style.height = size + "px";
             circle.style.left = RandomNumb(20,950) + "px";
             circle.style.top = RandomNumb(20,600) + "px";
             circle.className = "circle";
             circle.classList.add(UserId);
-            console.log(circle.style["background-color"]);
-            socket.emit('user done26',  circle.style);
+            socket.emit('user done26',  color, size, circle.style["left"], circle.style["top"]);
             //MainCircle = document.getElementByClassName[UserId][0];
 	  }); 
       socket.on('user done26', function(X, Y, color, size, ID, users26){
