--- a/days/day26.html
+++ b/days/day26.html
@@ -49,8 +49,8 @@
         AnotherСircle = document.createElement('div');
         stage.appendChild(AnotherСircle);
         AnotherСircle.style.backgroundColor = color;
-        AnotherСircle.style.width = size; 
-        AnotherСircle.style.height = size;
+        AnotherСircle.style.width = size + 'px'; 
+        AnotherСircle.style.height = size + 'px';
         AnotherСircle.style.left = X;
         AnotherСircle.style.top = Y;
         AnotherСircle.className = "circle";
