--- a/days/day26.html
+++ b/days/day26.html
@@ -68,7 +68,7 @@
         console.log(UserId);
         test = UserId+"";
 	      console.log(test);
-        ThisCircle = document.getElementByClassName(test)[0];
+        ThisCircle = document.getElementByClassName(test);
         stage.removeChild(ThisCircle);
       });
             /*
