--- a/days/day26.html
+++ b/days/day26.html
@@ -63,7 +63,8 @@
           }       
       });
       socket.on('user disconnected', function(UserId){
-        //test = UserId+"";
+        test = UserId+"";
+	      console.log(document.getElementByClassName(test));
         ThisCircle = document.getElementByClassName(window[UserId]);
         stage.removeChild(ThisCircle);
       });
