--- a/days/day26.html
+++ b/days/day26.html
@@ -36,7 +36,7 @@
             circle.className = "circle";
             circle.classList.add(UserId);
             socket.emit('user done26',  color, size, circle.style["left"], circle.style["top"]);
-            MainCircle = document.getElementsByClassName[ID][0];
+            MainCircle = document.getElementsByClassName(ID)[0];
             MainCircle.addEventListener("mousedown", function(evt) {
 		    console.log(evt);
               CreateTail(evt.stageX, evt.stageY, color, size); 
