--- a/days/day26.html
+++ b/days/day26.html
@@ -39,10 +39,10 @@
             MainCircle = document.getElementsByClassName(ID)[0];
             MainCircle.addEventListener("mousedown", function(evt) {
 		    console.log(evt);
-              CreateTail(evt.stageX, evt.stageY, color, size); 
-              MainCircle.style.left = evt.stageX + "px";
-              MainCircle.style.top= evt.stageY + "px";   
-              socket.emit('move done', {x: window[UserId].x, y: window[UserId].y}, ID);
+              //CreateTail(evt.stageX, evt.stageY, color, size); 
+              MainCircle.style.left = evt.clientX - size/2 + "px";
+              MainCircle.style.top= evt.clientY - size/2 + "px";   
+              //socket.emit('move done', {x: window[UserId].x, y: window[UserId].y}, ID);
             });
 	  }); 
       socket.on('user done26', function(X, Y, color, size, ID, users26){
