--- a/days/day26.html
+++ b/days/day26.html
@@ -37,12 +37,14 @@
             circle.classList.add(UserId);
             socket.emit('user done26',  color, size, circle.style["left"], circle.style["top"]);
             MainCircle = document.getElementsByClassName(ID)[0];
-            MainCircle.addEventListener("mousedown", function(evt) {
+            MainCircle.addEventListener("mousedown", function() {
+              MainCircle.addEventListener("mousemove", function(evt){
 		    console.log(evt);
               //CreateTail(evt.stageX, evt.stageY, color, size); 
               MainCircle.style.left = evt.clientX - size/2 + "px";
               MainCircle.style.top= evt.clientY - size/2 + "px";   
               //socket.emit('move done', {x: window[UserId].x, y: window[UserId].y}, ID);
+	      });
             });
 	  }); 
       socket.on('user done26', function(X, Y, color, size, ID, users26){
