--- a/days/day26.html
+++ b/days/day26.html
@@ -45,7 +45,7 @@
               //socket.emit('move done', {x: window[UserId].x, y: window[UserId].y}, ID);
 	      });
               MainCircle.addEventListener("mouseup", function(){
-                stage.removeEventListener("mousemove", function());
+                stage.removeEventListener("mousemove", function(){});
               });
             });
 	  }); 
