--- a/days/day26.html
+++ b/days/day26.html
@@ -91,7 +91,8 @@
         circle.style.width = size + "px"; 
         circle.style.height = size + "px";
         circle.style.left = X;
-        circle.style.top = Y;      
+        circle.style.top = Y;
+        circle.className = "circle";
       }
             /*
 						
