--- a/days/day26.html
+++ b/days/day26.html
@@ -90,8 +90,8 @@
         circle.style.backgroundColor = color;
         circle.style.width = size + "px"; 
         circle.style.height = size + "px";
-        circle.style.left = 0 + "px";
-        circle.style.top =  0 + "px";
+        circle.style.left = X;
+        circle.style.top =  Y;
         circle.className = "circle";
       }
             /*
