--- a/days/day26.html
+++ b/days/day26.html
@@ -93,10 +93,12 @@
         circle.style.left = X;
         circle.style.top =  Y;
         circle.className = "circle";
-        setTimeout(function (){
-          circle.style.opacity = 0;
-          circle.style.width = 0;
-          circle.style.height = 0;
+        setInterval(function (){
+          if (circle.style.opacity != 0 &&  circle.style.width !=0) {
+            circle.style.opacity = 0;
+            circle.style.width = 0;
+            circle.style.height = 0;
+	  }
 	},150);
       }
             /*
