--- a/days/day26.html
+++ b/days/day26.html
@@ -50,7 +50,7 @@
               //socket.emit('move done', {x: window[UserId].x, y: window[UserId].y}, ID);
 	      };
 	    });
-            stage.addEventListener("mouseup", function(){
+            MainCircle.addEventListener("mouseup", function(){
                isMouseDown = false;
             });
 	  }); 
